--- a/Changes
+++ b/Changes
@@ -2,6 +2,13 @@ Changelog for Tk-Sugar
 
 {{$NEXT}}
 
+1.093190 Sun Nov 15 11:32:01 2009
+ - subs available for padding
+ - subs available for internal padding
+ - subs available for widget state
+ - subs available for anchor option
+ - subs available for orientation
+
 1.093180 Sat Nov 14 19:52:21 2009
  - initial release
  - subs available for pack sides
